--- a/skins/default/formio.builder.css
+++ b/skins/default/formio.builder.css
@@ -56,6 +56,7 @@ dialog.fixed {
   opacity: 0.8;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80);
+  pointer-events: none;
 }
 .gu-hide {
   display: none !important;
